--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,18 @@
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 16px;
+}
+
 h1 {
     text-align: center;
     color: brown;
     text-transform: uppercase;
+    font-size: 3.8rem;
+}
+
+span {
+    font-size: 2rem;
 }
