--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,13 @@ body {
     font-size: 16px;
 }
 
-h1 {
+.titulo {
     text-align: center;
     color: brown;
     text-transform: uppercase;
     font-size: 3.8rem;
 }
 
-span {
+.titulo span {
     font-size: 2rem;
 }
