--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+*. *:before, *:after{
+    box-sizing: inherit;
 }
 
 body {
@@ -21,7 +26,8 @@ body {
     text-transform: uppercase;
     font-size: 3.8rem;
 }
-    
+
+
 .titulo span{
     font-size: 2rem;
     color: var(--tercero);
@@ -62,7 +68,22 @@ body {
 }
 
 .hero {
-    background-image: url(../img/madera_inicio.jpg);
+    background-image: url(../img/canape_inicio.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 450px;
+    position: relative;
+    text-align: center;
+
+    
+}
+
+.contenido-hero {
+    position: absolute;
+    background-color: rgba( 0,0,0, .3 );
+    width: 100%;
+    height: 100%;
+
+
+
 }
