--- a/css/styles.css
+++ b/css/styles.css
@@ -15,18 +15,29 @@ html {
 }
 
 body {
-    font-size: 3rem;
+    font-size: 16px;
     font-family: 'Kiwi Maru', serif;
     background-color: #6D461D;
-}
+} 
 
-.titulo {
-    text-align: center;
-    color: brown;
-    text-transform: uppercase;
+h1 {
     font-size: 3.8rem;
+    color: brown;
+    text-align: center;
+    text-transform: uppercase
 }
 
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1,h2,h3 {
+    text-align: center;
+}
 
 .titulo span{
     font-size: 2rem;
@@ -74,8 +85,6 @@ body {
     height: 450px;
     position: relative;
     text-align: center;
-
-    
 }
 
 .contenido-hero {
@@ -83,7 +92,11 @@ body {
     background-color: rgba( 0,0,0, .3 );
     width: 100%;
     height: 100%;
+}
 
-
-
+.ubicacion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
