--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --secundario: #C64024;
     --blanco: white;
     --tercero: #BA4D36;
+    --cuarto: #86715B
 }
 
 html {
@@ -10,7 +11,7 @@ html {
     box-sizing: border-box;
 }
 
-*. *:before, *:after{
+*, *:before, *:after{
     box-sizing: inherit;
 }
 
@@ -48,6 +49,26 @@ h1,h2,h3 {
     max-width: 120rem;
 
     margin:  0 auto;
+}
+
+.boton {
+    background-color: var(--cuarto);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+}
+
+@media (min-width: 480px) {
+    .boton {
+        width: auto;
+    }
 }
 
 .nav-bg {
@@ -100,3 +121,4 @@ h1,h2,h3 {
     align-items: center;
     justify-content: center;
 }
+
