--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body {
     background-color: var(--cuarto);
     color: var(--blanco);
     padding: 1rem 3rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
     font-size: 2rem;
     text-decoration: none;
     text-transform: uppercase;
@@ -59,6 +59,10 @@ body {
 
 .boton:hover {
     cursor: pointer;
+}
+
+.enviar .boton {
+    width: 100%;
 }
 
 .sombra {
@@ -191,7 +195,7 @@ h3 {
 /* Contacto */
 .formulario {
     background-color: var(--sexto);
-    width: min(60rem, 100%);
+    width: min(70rem, 100%);
     margin: 0 auto;
     padding: 2rem;
     border-radius: 1rem;
@@ -209,7 +213,21 @@ h3 {
     color: var(--primario);
 }
 
-.contenedor campo {
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;   /* Creación de las sepraciones*/
+        grid-template-columns: repeat(2, 1fr); /* Separación en columnas*/
+        grid-template-rows: auto auto 15rem;
+        column-gap: 1rem; /* Seoaración de las columnas*/
+    }
+
+    .campo:nth-child(3), /* Evita crear una clase extra (correo)*/
+    .campo:nth-child(4) { 
+        grid-column: 1/3;
+    }
+}
+
+.campo {
     margin-bottom: 1rem;
 }
 
@@ -220,6 +238,10 @@ h3 {
     display: block;
 }
 
+.campo textarea {
+    height: 10rem;
+}
+
 .input-text {
     width: 100%;
     border: none;
@@ -227,6 +249,6 @@ h3 {
     border-radius: .5rem;
 }
 
-.enviar .boton {
-    width: 100%;
+.footer {
+    text-align: center;
 }
