--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,12 @@ body {
 }
 
 .sombra {
-    -webkit-box-shadow: 10px 7px 15px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 10px 7px 15px 0px rgba(0,0,0,0.75);
-box-shadow: 10px 7px 15px 0px rgba(0,0,0,0.75);
-background-color: var(--quinto);
-padding: 2rem;
-border-radius: 1rem;
+    -webkit-box-shadow: 10px 7px 15px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 7px 15px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 7px 15px 0px rgba(7, 7, 7, 0.75);
+    background-color: var(--quinto);
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
 /* ---------- */
@@ -112,7 +112,7 @@ h3 {
     width: 100%;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
     .w-sm-100 {
         width: auto;
     }
@@ -204,6 +204,7 @@ h3 {
 .formulario fieldset {
     border: none;
 }
+
 .formulario legend {
     text-align: center;
     font-size: 1.8rem;
@@ -215,14 +216,18 @@ h3 {
 
 @media (min-width: 768px) {
     .contenedor-campos {
-        display: grid;   /* Creación de las sepraciones*/
-        grid-template-columns: repeat(2, 1fr); /* Separación en columnas*/
+        display: grid;
+        /* Creación de las sepraciones*/
+        grid-template-columns: repeat(2, 1fr);
+        /* Separación en columnas*/
         grid-template-rows: auto auto 15rem;
-        column-gap: 1rem; /* Seoaración de las columnas*/
+        column-gap: 1rem;
+        /* Seoaración de las columnas*/
     }
 
-    .campo:nth-child(3), /* Evita crear una clase extra (correo)*/
-    .campo:nth-child(4) { 
+    .campo:nth-child(3),
+    /* Evita crear una clase extra (correo)*/
+    .campo:nth-child(4) {
         grid-column: 1/3;
     }
 }
